--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: knnTree
-Version: 1.2.3
-Date: 2004-11-15
+Version: 1.2.4
+Date: 2008-05-06
 Title: k-nn classification with variable selection inside leaves of a tree
-Author: Sam Buttrey <buttrey@nps.navy.mil>
-Maintainer: Sam Buttrey <buttrey@nps.navy.mil>
+Author: Sam Buttrey <buttrey@nps.edu>
+Maintainer: Sam Buttrey <buttrey@nps.edu>
 Description: Construct or predict with k-nearest-neighbor classifiers,
     using cross-validation to select k, choose variables (by forward
     or backwards selection), and choose scaling (from among no scaling,
@@ -11,3 +11,4 @@ Description: Construct or predict with k-nearest-neighbor classifiers,
     The finished classifier will consist of a classification tree with
     one such k-nn classifier in each leaf.
 License: GPL version 2
+Packaged: Tue May  6 16:58:49 2008; sebuttre
